# hwpush

./: .gitignore  Cargo.toml  README.md  agents.md
docs/superpowers/specs/: 2026-07-06-hiboard-design.md  2026-07-06-hwpush-design.md
src/: main.rs
src/cli/: init.rs  mod.rs  push.rs  template.rs
src/config/: keychain.rs  mod.rs  profile.rs
src/core/: mod.rs  pusher.rs  validator.rs
src/storage/: history.rs
src/template/: manager.rs
templates/: daily.md  news.md
tests/: integration_test.rs
tests/e2e/: README.md  periodic_card.md  run.sh  standard_card.md  summary_card.md
