[package]
name = "hiboard"
version = "0.1.0"
edition = "2024"
description = "A Rust CLI tool for pushing task results to Huawei negative screen (负一屏)"

[dependencies]
clap = { version = "4", features = ["derive"] }
reqwest = { version = "0.12", features = ["json", "blocking"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
rusqlite = { version = "0.32", features = ["bundled"] }
chrono = { version = "0.4", features = ["serde"] }
security-framework = "3"
dirs = "6"
thiserror = "2"
rpassword = "7"
